<resources>
    <string name="app_name">Pokecom GO</string>

    <string name="action_settings">Settings</string>

    <!-- menu used -->
    <string name="opt_menu_load">load...</string>
    <string name="opt_menu_save">save...</string>
    <string name="opt_menu_reset">reset</string>
    <string name="opt_menu_settings">settings...</string>
    <string name="opt_menu_about">about...</string>
    <string name="opt_menu_debug">debug...</string>
    <string name="opt_menu_exit">exit</string>

    <!-- file select used -->
    <string name="file_select_to_parent">to parent</string>
    <string name="file_select_back">back</string>
    <string name="file_select_cancel">cancel</string>

    <!-- preference strings -->
    <string name="preference_title">settings</string>
    <string name="ui_design_list">UI design</string>
    <string name="ui_design_summary">UI design settings.</string>
    <string name="cpu_clock_wait">cpu clock emulate</string>
    <string name="cpu_clock_summary">Set the cpu emulation speed.</string>
    <string name="memory_unit">memory unit</string>
    <string name="memory_unit_summary">Enable extended memory unit.</string>
    <string name="storage_checkbox_title">legacy file io function</string>
    <string name="storage_checkbox_summary">Use legacy file io function.If Android version 10 or less.</string>
    <string name="vibrator_checkbox_title">viblation</string>
    <string name="vibrator_checkbox_summary">Activate vibrator function when key is pressed.</string>
    <string name="debug_checkbox_title">debug</string>
    <string name="debug_checkbox_summary">Enable the function to display debugging information.</string>


    <string name="about_title">About Pokecom GO</string>
    <string name="about_body">
        This is a simulator of CASIO\'s Pocket Computer PB-100.\n
        It reproduces the unique BASIC of the PB-100 generation.\n
        (Omitting the closing parentheses of calculation formula,\n
         using variables in the destination of GOTO, etc. ..) \n
        You can input and output BASIC text file by load and save menu.\n
        And sound data compatible with cassette I/F is analog output by SAVE command.\n
        \n
        ＜Supported BASIC instraction＞\n
        PRINT\n
        INPUT\n
        GOTO\n
        GOSUB-RETURN\n
        FOR-TO-STEP-NEXT\n
        IF-THEN/IF-;\n
        VAC\n
        CLEAR/CLEAR A\n
        RUN\n
        LIST\n
        END\n
        KEY\n
        CSR\n
        DEFM\n
        MID\n
        VAL\n
        SIN/COS/TAN/ASN/ACS/ATN\n
        LOG/LN/EXP/SQR\n
        ABS\n
        SGN\n
        INT\n
        FRAC\n
        RND\n
        RAN#\n
        STOP\n
        SAVE\n
        ON-GOTO/ON-GOSUB\n
        READ-DATA-RESTORE\n
        STR$\n
        KEY$\n
        MID$\n
        BEEP\n
        LET\n
        \n
        ＜Setting menu＞\n
        ・cpu clock emulate\n
        　Putting some wait of execution and realize the operation close\n
        　to the actual machine.\n
        ・memory unit\n
        　Setting whether extended memory exists or not.\n
        　It only changes the remaining memory display.\n
        ・UI design\n
        　When set to \'PB-100 compatible\' it will be like PB-100.\n
        　When set to \'PB-100 custom\' the \'F\'key and \'↑\'/\'↓\'key is enabled.\n
        ・legacy file io functio\n
        　Use legacy file io function, if Android version 10 or less.\n
        ・viblation\n
        　It vibrates when the key is pressed.\n
        ・debug\n
        　It displays debug messages and a frame of software keys.\n
        \n
        ＜About Special Symbols＞\n
        In the input/output file, PB special symbols are converted to escape characters.\n
        Invalid except ASCII code.\n
        \n
        \\\\  ¥\n
        \\LE(or &lt;=) Less Equal\n
        \\NE(or &lt;&gt;) Not Equal\n
        \\GE(or &gt;=) Greater Equal\n
        \\LA Left Arrow\n
        \\DA Down Arrow\n
        \\RA Right Arrow\n
        \\UA Up Arrow\n
        \\PI PI\n
        \\EX EXponent\n
        \\CI CIrcle\n
        \\SQ SQuare\n
        \\TR TRiangle\n
        \\CR CRoss\n
        \\DV DiVide\n
        \\DT DoT\n
        \\DG DeGree\n
        \\SP SPade\n
        \\HT HearT\n
        \\DI DIa\n
        \\CL CLover\n
        \\BX Box\n
        \\SG SiGma\n
        \\OM OMega\n
        \\MU MU\n
        \n
        ＜Other＞\n
        Spaces between instructions and parameters can be omitted.\n
        (ex.)\n
        PRINT CSR1;"ABC"\n
        SINA\n
        etc.\n
        \n
        If you press the \'←\' key after manual calculation, \n
        the previous command will be displayed.\n
        \n
        Step count calculation is not accurate. There are some errors with the actual machine.\n
        \n
        Program trace execution is not implemented yet.\n
        Moreover, the program can not resume after interruption. It will only be finished.


    </string>

</resources>
