<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/preference_title"
        android:layout="@layout/custom_preference">


        <tk.horiuchi.pokecom2.ParamReadableListPreference
            android:key="cpu_clock_wait_key"
            android:defaultValue="2"
            android:title="@string/cpu_clock_wait"
            android:summary="@string/cpu_clock_summary"
            android:entries="@array/cpu_clock_wait"
            android:entryValues="@array/cpu_clock_waitvalues"/>

        <CheckBoxPreference
            android:key="memory_unit_key"
            android:defaultValue="true"
            android:title="@string/memory_unit"
            android:summary="@string/memory_unit_summary" />

        <tk.horiuchi.pokecom2.ParamReadableListPreference
            android:key="ui_design_key"
            android:defaultValue="0"
            android:title="@string/ui_design_list"
            android:summary="@string/ui_design_summary"
            android:entries="@array/ui_list_entries"
            android:entryValues="@array/ui_list_entryvalues"/>

        <CheckBoxPreference
            android:key="storage_checkbox_key"
            android:defaultValue="true"
            android:title="@string/storage_checkbox_title"
            android:summary="@string/storage_checkbox_summary" />

        <CheckBoxPreference
            android:key="vibrator_checkbox_key"
            android:defaultValue="true"
            android:title="@string/vibrator_checkbox_title"
            android:summary="@string/vibrator_checkbox_summary" />


        <CheckBoxPreference
            android:key="debug_checkbox_key"
            android:defaultValue="false"
            android:title="@string/debug_checkbox_title"
            android:summary="@string/debug_checkbox_summary" />

    </PreferenceCategory>
</PreferenceScreen>