<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/optionsMenu_01"
        android:title="@string/opt_menu_load"
        />

    <item
        android:id="@+id/optionsMenu_02"
        android:title="@string/opt_menu_save"
        />

    <item
        android:id="@+id/optionsMenu_03"
        android:title="@string/opt_menu_reset"
        />

    <item
        android:id="@+id/optionsMenu_04"
        android:title="@string/opt_menu_settings"
        />

    <item
        android:id="@+id/optionsMenu_05"
        android:title="@string/opt_menu_about"
        />

    <item
        android:id="@+id/optionsMenu_06"
        android:title="@string/opt_menu_exit"
        />

</menu>